--- a/index.html
+++ b/index.html
@@ -166,8 +166,10 @@
                         const db = getDatabase();
                         console.log(db);
 
-                        const userData = ref(db, userId + '/value')
+                        const userData = ref(db, userId + '/value');
+                        const userData2 = ref(db, userId);
                         console.log(userData);
+                        console.log(userData2);
                         
                         onValue(userData, (snapshot) => {
                             document.getElementById("genHashtags").value = snapshot.val().gen
