--- a/index.html
+++ b/index.html
@@ -168,10 +168,8 @@
 
                         const userData = ref(db, userId + '/value');
                         const userData2 = ref(db, userId);
-                        console.log(userData);
-                        console.log(userData2);
                         
-                        onValue(userData, (snapshot) => {
+                        onValue(userData2, (snapshot) => {
                             document.getElementById("genHashtags").value = snapshot.val().gen
                             document.getElementById("specHashtags").value = snapshot.val().spec
                             resolve("Great!")
