--- a/index.html
+++ b/index.html
@@ -164,10 +164,8 @@
                     console.log("Loading")
                     const loadPromise = new Promise((resolve, reject) => {
                         const db = getDatabase();
-                        // console.log(db);
 
                         const userData = ref(db, userId);
-                        
                         onValue(userData, (snapshot) => {
                             document.getElementById("genHashtags").value = snapshot.val().gen
                             document.getElementById("specHashtags").value = snapshot.val().spec
@@ -175,12 +173,10 @@
                         })
                     })
                     loadPromise.then(val => {
-                        // console.log("then1")
                         this.messageGeneral = document.getElementById("genHashtags").value
                         this.messageSpecific = document.getElementById("specHashtags").value
                         // console.log(this.messageGeneral)
                     }).then(val => {
-                        // console.log("then2")
                         let keyupEvent = new Event("keyup")
                         document.getElementById("genHashtags").dispatchEvent(keyupEvent)
                         document.getElementById("specHashtags").dispatchEvent(keyupEvent)
@@ -199,14 +195,14 @@
 
         onAuthStateChanged(auth, (user) => {
             if (user) {
-                // User is signed in, see docs for a list of available properties
-                // https://firebase.google.com/docs/reference/js/firebase.User
                 userId = user.uid;
                 signInRender();
+                signedIn = true;
                 console.log("Already signed in");
             } else {
                 signOutRender();
                 console.log("No signed in user");
+                signedIn = false;
             }
         });
 
@@ -254,12 +250,13 @@
             });
         }
         function saveHashtags() {
-            var auth2 = gapi.auth2.getAuthInstance();
-            if (auth2.isSignedIn.get()){
+            if (signedIn) {
                 let gen = document.getElementById("genHashtags").value.trim()
                 let spec = document.getElementById("specHashtags").value.trim()
                 // console.log(gen, spec)
-                firebase.database().ref(userId).set({
+
+                const db = getDatabase();
+                set(ref(db, userId), {
                     gen: gen,
                     spec: spec
                 })
